crates/textual-rs/tests/snapshots/widget_tests__snapshot_markdown_bold_italic.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"bold and italic                         "
"                                        "
"                                        "
"                                        "
"                                        "
