crates/textual-rs/tests/snapshots/widget_tests__snapshot_markdown_code_block.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"  code here                             "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
