crates/textual-rs/tests/snapshots/widget_tests__snapshot_markdown_headings.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"H1                                      "
"                                        "
"H2                                      "
"                                        "
"H3                                      "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
