crates/textual-rs/tests/snapshots/widget_tests__snapshot_markdown_list.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"  • item 1                              "
"  • item 2                              "
"  • item 3                              "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
