crates/textual-rs/tests/snapshots/widget_tests__snapshot_markdown_mixed.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"Title                                                       "
"                                                            "
"Bold text and italic text.                                  "
"                                                            "
"  • item one                                                "
"  • item two                                                "
"                                                            "
"link [https://example.com]                                  "
"                                                            "
"────────────────────────────────────────                    "
"  fn hello() {}                                             "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
