crates/textual-rs/tests/snapshots/widget_tests__snapshot_placeholder_labeled.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇"
"⡇⠸⡇⠸⡇⠸Sidebar⠸⡇⠸⡇⠸⡇⠸"
"⠸⡇⠸⡇⠸⡇⠸⡇20×5⠸⡇⠸⡇⠸⡇⠸⡇"
"⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸"
"⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇⠸⡇"
