crates/textual-rs/tests/snapshots/widget_tests__snapshot_progress_bar_50_percent.snap
---
source: crates/textual-rs/tests/widget_tests.rs
assertion_line: 1265
expression: "format!(\"{}\", test_app.backend())"
---
"██████████          "
