crates/textual-rs/tests/snapshots/widget_tests__snapshot_progress_bar_full.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"████████████████████"
